TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_after.dot
digraph AST {
  "137825308964032" [label="Start"];
  "137825308964032" -> "137825308964176";
  "137825308964176" [label="Code"];
  "137825308964176" -> "137825308961632";
  "137825308961632" [label="Function"];
  "137825308961632" -> "137825308961344";
  "137825308961632" -> "137825308961200";
  "137825308961632" -> "137825308952272";
  "137825308961344" [label="main"];
  "137825308961200" [label="Parameters"];
  "137825308952272" [label="Code"];
  "137825308952272" -> "137825308951408";
  "137825308952272" -> "137825308955104";
  "137825308952272" -> "137825308964752";
  "137825308951408" [label="Scope"];
  "137825308951408" -> "137825308956400";
  "137825308956400" [label="Declaration"];
  "137825308956400" -> "137825308952704";
  "137825308956400" -> "137825308953376";
  "137825308952704" [label="x"];
  "137825308953376" [label="1"];
  "137825308955104" [label="Scope"];
  "137825308955104" -> "137825308964368";
  "137825308964368" [label="Declaration"];
  "137825308964368" -> "137825308964560";
  "137825308964368" -> "137825308964704";
  "137825308964560" [label="x"];
  "137825308964704" [label="2"];
  "137825308964752" [label="Return"];
  "137825308964752" -> "137825308964944";
  "137825308964944" [label="0"];
}
